fixed game card image - clipped corners

--- a/src/assets/scss/modules/card.scss
+++ b/src/assets/scss/modules/card.scss
@@ -28,5 +28,7 @@
 }
 
 .card__face--back {
+  border-radius: 7px;
+
   transform: rotateY(180deg);
 }
